src/pages/DraftSelect.css
.draft-wrapper {
  margin: 30px 50px;
  display: flex;
  flex-direction: column;
}

.category-selection {
  font-size: 22px;
}

.player-turn {
  font-size: 18px;
}

.draft-header {
  align-self: center;
  text-align: center;
  margin: 0 0 10px 0;
}

.turn-order-header{
  margin: 0 0 10px 0;
  text-align: center;
  font-size: 18px; 
}

.draft-body {
  display: flex;
  flex-direction: column-reverse;
}

.border-gradient {
  border: 4px solid;
  border-image-slice: 1;
}

.border-gradient-rainbow {
  border-image-source: linear-gradient(0.25turn, #d80b0b, #eb9c1b, #f3f63c, #49e71e, #2488eb, #8c1ae4);
}

.border-gradient-reverse-rainbow {
  border-image-source: linear-gradient(0.25turn, #8c1ae4, #2488eb, #49e71e, #f3f63c, #eb9c1b, #d80b0b);
}

.draft-left {
  visibility: hidden;
}

.player-list {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.playerup-wrapper {
  padding: 10px;
  background: linear-gradient(0.25turn, rgb(249, 196, 5),  rgb(246, 230, 87));
} 

.player-wrapper {
  padding: 10px;
}

.another-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.name-and-placement {
  display: flex;
  flex-direction: row;
}

.player-draft-picks {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 5px;
}

.turn-order-container {
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
  justify-content: center;
  width: 25%;
}

.turn-order-choices {
  font-size: 10px;
}

.unpicked {
  font-size: 38px;
  align-self: center;
}

.show-stats {
  width: 0; 
  height: 0; 
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-top: 10px solid rgb(245, 55, 178);
  margin: 5px 0 0 0;
}

.show-stats:hover {
  cursor: pointer;
  transform: scale(1.1)
}

.hide-stats {
  width: 0; 
  height: 0; 
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-bottom: 10px solid rgb(245, 55, 178);
  margin: 5px 0 0 0;
}

.hide-stats:hover {
  cursor: pointer;
  transform: scale(1.1)
}

.character-component {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

.kart-component {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

.wheel-component {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

.glider-component {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

.border-gradient-placeholder {
  border-image-source: linear-gradient(0.25turn, rgb(246, 230, 87), rgb(249, 196, 5));
}

.placeholder-available {
  height: 50px;
  width: 50px;
  margin: 5px; 
  padding: 10px;
  text-align: center;
  justify-content: center; 
}

.draft-character-image {
  height: 40px;
  width: 40px;
}

.draft-kart-image {
  height: 32px;
  width: 50px;
}

.character-name {
  padding: 26px 0;
}

.placeholder-available:hover {
  cursor: pointer;
  transform: scale(.9)
}

.placeholder-unavailable {
  height: 50px;
  width: 50px;
  margin: 5px; 
  padding: 10px;
  text-align: center;
  background-color: gray; 
  opacity: 0.33;
}

.image-and-name {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100%;
}

.draft-name {
  font-size: 6px;
}

@media (min-width: 600px){
  .draft-body {
    display: flex;
    flex-direction: row;
  }

  .draft-name {
    font-size: 14px;
  }

  .draft-left {
    visibility: visible;
    width: 25%;
    padding: 10px;
    margin-top: 5px
  }

  .draft-right {
    width: 75%;
    display: flex;
    flex-flow: row wrap;
    align-items: flex-start;
    margin: 0 0 0 25px;
  }

  .character-component {
    display: flex;
    flex-flow: row wrap;
    justify-content: flex-start;
  }
  
  .kart-component {
    display: flex;
    flex-flow: row wrap;
    justify-content: flex-start;
  }
  
  .wheel-component {
    display: flex;
    flex-flow: row wrap;
    justify-content: flex-start;
  }
  
  .glider-component {
    display: flex;
    flex-flow: row wrap;
    justify-content: flex-start;
  }
  
  
  .placeholder-available {
    height: 120px;
    width: 120px;
    margin: 5px; 
    padding: 10px;
    text-align: center;
    justify-content: center; 
  }

  .placeholder-unavailable {
    height: 120px;
    width: 120px;
    margin: 5px; 
    padding: 10px;
    text-align: center;
    background-color: gray; 
    opacity: 0.33;
  }

  .draft-character-image {
    height: 100px;
    width: 100px;
  }

  .draft-kart-image {
    height: 64px;
    width: 100px; 
  }
}

